<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout.rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/title"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#333" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:gravity="left"
            android:padding="5dp"
            android:text="Current Location"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#333" />

        <LinearLayout
            android:id="@+id/fp_buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5sp">

            <TextView
                android:id="@+id/btn_go_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/outline_black_1dp"
                android:clickable="true"
                android:drawableTop="@drawable/ic_action_up"
                android:focusable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/up"
                android:textColor="#333" />

            <TextView
                android:id="@+id/btn_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/outline_black_1dp"
                android:clickable="true"
                android:drawableTop="@drawable/ic_action_add"
                android:focusable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/new_"
                android:textColor="#333" />

            <TextView
                android:id="@+id/btn_select"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/outline_black_1dp"
                android:clickable="true"
                android:drawableTop="@drawable/ic_action_done"
                android:focusable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/select"
                android:textColor="#333" />

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/outline_black_1dp"
                android:clickable="true"
                android:drawableTop="@drawable/ic_action_cancel"
                android:focusable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textColor="#333" />

        </LinearLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.cardview.widget.CardView>